chore: update VSCode settings and README for JSON schema support and installation instructions
- Added JSON schema configuration to VSCode settings
- Updated README installation instructions for better clarity
- Refactored tests for HighLevelClient to improve structure and readability

Looks like your code is evolving, but don't worry, it won't bite!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,13 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.experimental.updateImportsOnPaste": true,
   "typescript.preferences.importModuleSpecifier": "project-relative",
-  "typescript.suggest.paths": false
+  "typescript.suggest.paths": false,
+  "json.schemas": [
+    {
+      "fileMatch": ["schemas/v2/openapi/*.json"],
+      "url": "https://"
+    }
+  ],
+  "json.schemaDownload.enable": true
 
 }
