--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,34 @@
 {
 	"compilerOptions": {
+		"allowJs": true,
+		"allowSyntheticDefaultImports": true,
+		"baseUrl": ".",
+		"forceConsistentCasingInFileNames": true,
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
-		"target": "ESNext",
 		"lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
 		"module": "ESNext",
-		"strict": true,
-		"noEmit": true,
-		"moduleResolution": "Bundler",
 		"moduleDetection": "force",
+		"moduleResolution": "Bundler",
+		"noEmit": true,
 		"noUncheckedIndexedAccess": true,
-		"skipDefaultLibCheck": true,
-		"verbatimModuleSyntax": true,
-		"allowJs": true,
-		"skipLibCheck": true,
-		"preserveSymlinks": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"strictNullChecks": true,
-		"baseUrl": ".",
 		"paths": {
 			"src/*": ["./src/*"]
-		}
+		},
+		"preserveSymlinks": true,
+		"resolveJsonModule": true,
+		"skipDefaultLibCheck": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"strictNullChecks": true,
+		"target": "ESNext",
+		"verbatimModuleSyntax": true
 	},
+	"exclude": ["node_modules"],
 	"include": [
 		"src/**/*.ts",
 		"__tests__/**/*.ts",
 		"scripts/**/*.ts",
 		"src/**/*.json"
-	],
-	"exclude": ["node_modules"]
+	]
 }
