--- a/package.json
+++ b/package.json
@@ -61,7 +61,11 @@
 			"types": "./dist/webhooks.d.ts"
 		}
 	},
-	"files": ["dist", "README.md", "LICENSE"],
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE"
+	],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
@@ -98,5 +102,5 @@
 	},
 	"type": "module",
 	"types": "./dist/index.d.ts",
-	"version": "1.1.5"
+	"version": "1.2.0"
 }
