--- a/package.json
+++ b/package.json
@@ -19,53 +19,42 @@
 	},
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"node": "./dist/index.js",
-			"require": "./dist/index.js",
-			"types": "./dist/index.d.ts"
+			"types": "./dist/index.d.ts",
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/index.js"
 		},
 		"./configs": {
-			"import": "./dist/configs/highlevel.js",
-			"node": "./dist/configs/highlevel.js",
-			"require": "./dist/configs/highlevel.js",
-			"types": "./dist/configs/highlevel.d.ts"
+			"types": "./dist/configs/highlevel.d.ts",
+			"require": "./dist/cjs/configs/highlevel.js",
+			"import": "./dist/configs/highlevel.js"
 		},
 		"./configs/*": {
-			"import": "./dist/configs/*.js",
-			"node": "./dist/configs/*.js",
-			"require": "./dist/configs/*.js",
-			"types": "./dist/configs/*.d.ts"
+			"types": "./dist/configs/*.d.ts",
+			"require": "./dist/cjs/configs/*.js",
+			"import": "./dist/configs/*.js"
 		},
 		"./oauth": {
-			"import": "./dist/oauth.js",
-			"node": "./dist/oauth.js",
-			"require": "./dist/oauth.js",
-			"types": "./dist/oauth.d.ts"
+			"types": "./dist/oauth.d.ts",
+			"require": "./dist/cjs/oauth.js",
+			"import": "./dist/oauth.js"
 		},
 		"./scopes": {
-			"import": "./dist/scopes.js",
-			"node": "./dist/scopes.js",
-			"require": "./dist/scopes.js",
-			"types": "./dist/scopes.d.ts"
+			"types": "./dist/scopes.d.ts",
+			"require": "./dist/cjs/scopes.js",
+			"import": "./dist/scopes.js"
 		},
 		"./types/*": {
-			"import": "./dist/types/*.js",
-			"node": "./dist/types/*.js",
-			"require": "./dist/types/*.js",
-			"types": "./dist/types/*.d.ts"
+			"types": "./dist/types/*.d.ts",
+			"require": "./dist/cjs/types/*.js",
+			"import": "./dist/types/*.js"
 		},
 		"./webhooks": {
-			"import": "./dist/webhooks.js",
-			"node": "./dist/webhooks.js",
-			"require": "./dist/webhooks.js",
-			"types": "./dist/webhooks.d.ts"
+			"types": "./dist/webhooks.d.ts",
+			"require": "./dist/cjs/webhooks.js",
+			"import": "./dist/webhooks.js"
 		}
 	},
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
+	"files": ["dist", "README.md", "LICENSE"],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
