--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
 			"import": "./dist/webhooks.js"
 		}
 	},
-	"files": ["dist", "README.md", "LICENSE"],
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE"
+	],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
@@ -91,5 +95,5 @@
 	},
 	"type": "module",
 	"types": "./dist/index.d.ts",
-	"version": "1.2.0"
+	"version": "1.2.1"
 }
