chore: update bun-auth example with new environment variables and README improvements
- Added PORT variable to .env.example for local development
- Enhanced README with requirements and clearer instructions
- Refactored copy button script for readability
- Updated OAuth URLs to reflect new marketplace domain
- Renamed highlevel config files for better organization

--- a/examples/bun-auth/.env.example
+++ b/examples/bun-auth/.env.example
@@ -8,3 +8,7 @@ REDIRECT_URL="http://localhost:3000/auth/callback"
 # Your APP ID - in the URL for your app in HighLevel marketplace
 # https://marketplace.gohighlevel.com/apps/<YOUR APP ID>/settings
 APP_ID="6529d642a15b431da753b68f"
+
+# If developing locally, the port should match whatever you set in the callback URL in the app settings
+# example: http://localhost:3000/auth/callback
+PORT=3000
