feat: add .gitattributes and improve json schema handling in VSCode settings
- Added .gitattributes to treat openapi.json as a binary file
- Updated VSCode settings to match multiple openapi.json files and corrected URL
- Enhanced README with npm badges and clarified client usage
- Refactored test imports to align with new client structure
- Made minor adjustments to package.json for clarity and accuracy

Because why not make our code a little less ridiculous?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,10 @@
   "typescript.suggest.paths": false,
   "json.schemas": [
     {
-      "fileMatch": ["schemas/v2/openapi/*.json"],
-      "url": "https://"
+      "fileMatch": [
+          "schemas/**/*openapi.json"
+      ],
+      "url":"https://spec.openapis.org/oas/3.1/dialect/base"
     }
   ],
   "json.schemaDownload.enable": true
