- Add CI workflow configuration in ci.yaml - Update release-it configuration for better release management - Modify README to clarify access type limitations - Fix import order in db.ts for consistency - Update package.json scripts for improved build and generate commands - Refactor generate-api-json.ts to streamline schema fetching - Enhance generate-api-types.ts for better type generation - Rename generate-webhook-types.ts to generate-webhooks.ts for consistency - Improve ScopesBuilder class in scopes.ts for better access type handling - Add utility functions for string case conversion in utils.ts - Adjust tsconfig.build.json to prevent emitting files during build - Update tsup.config.ts for correct entry points and output configuration

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,24 +1,33 @@
 {
-    "$schema": "https://unpkg.com/release-it/schema/release-it.json",
-    "git": {
-        "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to}",
-        "commit": true,
-        "commitMessage": "chore(release): release ${version}",
-        "push": true,
-        "tag": true,
-        "tagAnnotation": "Release ${version}",
-        "tagName": "v${version}"
-    },
-    "github": {
-        "makeLatest": true,
-        "release": true
-    },
-    "npm": {
-        "access": "public",
-        "allowSameVersion": true,
-        "publish": true,
-        "publishConfig": {
-            "registry": "https://registry.npmjs.org/"
-        }
-    }
+	"$schema": "https://unpkg.com/release-it/schema/release-it.json",
+	"git": {
+		"changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to}",
+		"commit": true,
+		"commitMessage": "chore(release): release ${version}",
+		"push": true,
+		"tag": true,
+		"tagName": "v${version}"
+	},
+	"github": {
+		"makeLatest": true,
+		"release": true,
+		"releaseName": "${npm.name} v${version}",
+		"releaseNotes": {
+			"changelog": "CHANGELOG.md"
+		}
+	},
+	"hooks": {
+		"before:init": ["bun run lint", "bun test", "bun run build"]
+	},
+	"npm": {
+		"access": "public",
+		"allowSameVersion": true,
+		"publish": true
+	},
+	"plugins": {
+		"@release-it/keep-a-changelog": {
+			"addUnreleased": true,
+			"filename": "CHANGELOG.md"
+		}
+	}
 }
