--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
 			"import": "./dist/index.js"
 		},
 		"./configs": {
-			"types": "./dist/configs/highlevel.d.ts",
-			"require": "./dist/cjs/configs/highlevel.js",
-			"import": "./dist/configs/highlevel.js"
+			"types": "./dist/configs/index.d.ts",
+			"require": "./dist/cjs/configs/index.js",
+			"import": "./dist/configs/index.js"
 		},
 		"./configs/*": {
-			"types": "./dist/configs/*.d.ts",
-			"require": "./dist/cjs/configs/*.js",
-			"import": "./dist/configs/*.js"
+			"types": "./dist/configs/oauth.d.ts",
+			"require": "./dist/cjs/configs/oauth.js",
+			"import": "./dist/configs/oauth.js"
 		},
 		"./oauth": {
 			"types": "./dist/oauth.d.ts",
@@ -89,14 +89,14 @@
 		"url": "https://github.com/gnosticdev/highlevel-sdk"
 	},
 	"scripts": {
-		"build-package": "bun --bun tsup --tsconfig tsconfig.build.json",
-		"generate-all": "bun run bun run generate-api-json && bun run generate-api-types && bun run generate-webhook-types && bun run generate-scopes",
+		"build": "bun --bun tsup",
+		"generate-all": "bun run bun run generate-api-json && bun run generate-api-types && bun run generate-webhooks && bun run generate-scopes",
 		"generate-api-json": "bun scripts/generate-api-json.ts",
 		"generate-api-types": "bun scripts/generate-api-types.ts",
 		"generate-scopes": "bun scripts/generate-scopes.ts",
-		"generate-webhook-types": "bun scripts/generate-webhook-types.ts",
+		"generate-webhooks": "bun scripts/generate-webhooks.ts",
 		"lint": "biome check . --write --unsafe",
-		"prepack": "bun test && bun run build-package",
+		"typecheck": "bun tsc -p tsconfig.json",
 		"release-it": "release-it",
 		"start-test": "bun test --hot"
 	},
