- Add after bump hook to run auto-changelog - Update before init hooks to include lint, test, and build - Add keep-a-changelog plugin as a dev dependency - Create new CHANGELOG.md file - Update package.json and .release-it.json for new configurations

--- a/.release-it.json
+++ b/.release-it.json
@@ -17,17 +17,12 @@
 		}
 	},
 	"hooks": {
+		"after:bump": ["bunx auto-changelog"],
 		"before:init": ["bun run lint", "bun test", "bun run build"]
 	},
 	"npm": {
 		"access": "public",
 		"allowSameVersion": true,
 		"publish": true
-	},
-	"plugins": {
-		"@release-it/keep-a-changelog": {
-			"addUnreleased": true,
-			"filename": "CHANGELOG.md"
-		}
 	}
 }
