--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"description": "SDK for the HighLevel API",
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.2",
+		"@release-it/keep-a-changelog": "^5.0.0",
 		"@types/bun": "^1.1.6",
 		"kleur": "^4.1.5",
 		"lefthook": "^1.7.17",
@@ -100,7 +101,6 @@
 		"release-it": "release-it",
 		"start-test": "bun test --hot"
 	},
-
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"version": "1.2.4"
