chore: minor fixes - Adjust import order in bun-auth example to import Database correctly - Correct method name from getAuthorizationURL to getAuthorizationUrl in bun-auth example - Simplify tsconfig.json by removing unnecessary include entries - Update tsup.config.ts to specify type for accumulator in reduce function

--- a/.release-it.json
+++ b/.release-it.json
@@ -16,7 +16,7 @@
 		}
 	},
 	"hooks": {
-		"after:bump": ["bunx auto-changelog"],
+		"after:bump": ["bunx auto-changelog -p"],
 		"before:init": ["bun run lint", "bun test", "bun run build"]
 	},
 	"npm": {
