feat: enhance API client tests and update environment variables
- Added a new `PRIVATE_TOKEN` to the environment configuration for private integrations.
- Refactored tests for the `Locations` endpoint to include:
  - Setup of `OauthClient` using `beforeEach` for better test isolation.
  - Mocking responses for both successful and error cases when fetching and creating locations.
- Expanded the schemas with new endpoints for blogs and improved error handling in the `POST /locations` test.
- Updated the `package.json` to include a new script for generating interfaces.
- Made significant updates to various JSON schemas, including adding, renaming, and restructuring multiple webhook and API response types, ensuring they align with the latest API specifications.

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ REDIRECT_URL="http://localhost:3000/auth/callback"
 # https://marketplace.gohighlevel.com/apps/<YOUR APP ID>/settings
 APP_ID=""
 
-# JWT Secret for signing tokens
-JWT_SECRET=""
-
 # HighLevel API Key for V1 API
 HIGHLEVEL_API_KEY=""
+
+# Token For Private Integrations can be used in place of OAuth2 generated tokens
+PRIVATE_TOKEN=""
