--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
 	"scripts": {
 		"build": "bun --bun tsup",
 		"fetch-json": "bun scripts/fetch-json.ts",
-		"generate-all": "bun run fetch-json && bun run generate-v2-types && bun run generate-v1-types && bun run generate-webhooks && bun run generate-scopes",
+		"generate-all": "bun run fetch-json && bun run generate-v2-types && bun run generate-v1-types && bun run generate-webhooks && bun run generate-scopes && bun run generate-interface",
+		"generate-interface": "bun scripts/generate-interface.ts",
 		"generate-scopes": "bun scripts/generate-scopes.ts",
 		"generate-v1-types": "bun scripts/generate-v1-types.ts",
 		"generate-v2-types": "bun scripts/generate-v2-types.ts",
