--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
 			"types": "./dist/webhooks.d.ts"
 		}
 	},
-	"files": ["dist", "README.md", "LICENSE"],
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE"
+	],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
@@ -98,8 +102,10 @@
 		"start-test": "bun test --hot",
 		"typecheck": "bun tsc -p tsconfig.json"
 	},
-	"trustedDependencies": ["@biomejs/biome"],
+	"trustedDependencies": [
+		"@biomejs/biome"
+	],
 	"type": "module",
 	"types": "./dist/index.d.ts",
-	"version": "1.3.0"
+	"version": "1.4.0"
 }
