--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"url": "https://github.com/gnosticdev"
 	},
 	"dependencies": {
-		"openapi-fetch": "^0.12.2"
+		"hono": "^4.6.11",
+		"openapi-fetch": "^0.13.3"
 	},
 	"description": "SDK for the HighLevel API",
 	"devDependencies": {
@@ -12,10 +13,11 @@
 		"@types/bun": "^1.1.6",
 		"kleur": "^4.1.5",
 		"lefthook": "^1.7.17",
-		"openapi-typescript": "7.4.1",
+		"openapi-typescript": "7.4.4",
 		"release-it": "^17.6.0",
 		"tsup": "^8.3.0",
-		"typescript": "^5.6.3"
+		"typescript": "^5.8.0-dev.20241223",
+		"vitest": "^2.1.8"
 	},
 	"exports": {
 		".": {
@@ -59,11 +61,7 @@
 			"types": "./dist/webhooks.d.ts"
 		}
 	},
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
+	"files": ["dist", "README.md", "LICENSE"],
 	"homepage": "https://github.com/gnosticdev/highlevel-api-sdk",
 	"keywords": [
 		"highlevel",
@@ -102,9 +100,7 @@
 		"start-test": "bun test --hot",
 		"typecheck": "bun tsc -p tsconfig.json"
 	},
-	"trustedDependencies": [
-		"@biomejs/biome"
-	],
+	"trustedDependencies": ["@biomejs/biome"],
 	"type": "module",
 	"types": "./dist/index.d.ts",
 	"version": "1.4.0"
