--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": ".",
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
-		"module": "ESNext",
+		"lib": ["ESNext", "ESNext.Array", "DOM", "DOM.Iterable", "ScriptHost"],
+		"module": "Preserve",
 		"moduleDetection": "force",
 		"moduleResolution": "Bundler",
 		"noEmit": true,
